--- a/source/_footer.html.erb
+++ b/source/_footer.html.erb
@@ -26,7 +26,7 @@
     </div>
   </div>
   <div class="bottom_footer">
-    <p>© 201X–201X Empower MediaMarketing. All rights reserved. <a href="Privacy Policy"></a></p>
+    <p>© 201X–201X Empower MediaMarketing. All rights reserved. <a href="#">Privacy Policy</a></p>
     <a href="#" class="to_top">To The Top</a>
     <ul class="social_footer">
       <li><a href="#" class="twitter">Twitter</a></li>
