beginning of our-people

--- a/source/_news_previews.html.erb
+++ b/source/_news_previews.html.erb
@@ -2,7 +2,7 @@
   <ul>
     <li>
       <a href="#" style="background-image: url(images/articles/divesting_print.jpg);">
-        <header><span>News Title</span>News &amp; Insights</header>
+        <header><span>News Title</span><em>Section Name</em>News &amp; Insights</header>
         <span>
           <p>Media Giants Divest Newspapers, Focus on Broadcast &amp; Digital</p>
         </span>
@@ -10,7 +10,7 @@
     </li>
     <li>
       <a href="#" style="background-image: url(images/articles/divesting_print.jpg);">
-        <header><span>News Title</span>News &amp; Insights</header>
+        <header><span>News Title</span><em>Section Name</em>News &amp; Insights</header>
         <span>
           <p>Media Giants Divest Newspapers, Focus on Broadcast &amp; Digital</p>
         </span>
@@ -20,7 +20,7 @@
       <ul>
         <li>
           <a href="#" style="background-image: url(images/articles/divesting_print.jpg);">
-            <header><span>News Title</span>News &amp; Insights</header>
+            <header><span>News Title</span><em>Section Name</em>News &amp; Insights</header>
             <span>
               <p>Media Giants Divest Newspapers, Focus on Broadcast &amp; Digital</p>
             </span>
@@ -28,7 +28,7 @@
         </li>
         <li>
           <a href="#" style="background-image: url(images/articles/divesting_print.jpg);">
-            <header><span>News Title</span>News &amp; Insights</header>
+            <header><span>News Title</span><em>Section Name</em>News &amp; Insights</header>
             <span>
               <p>Media Giants Divest Newspapers, Focus on Broadcast &amp; Digital</p>
             </span>
@@ -36,7 +36,7 @@
         </li>
         <li>
           <a href="#" style="background-image: url(images/articles/divesting_print.jpg);">
-            <header><span>News Title</span>News &amp; Insights</header>
+            <header><span>News Title</span><em>Section Name</em>News &amp; Insights</header>
             <span>
               <p>Media Giants Divest Newspapers, Focus on Broadcast &amp; Digital</p>
             </span>
@@ -44,7 +44,7 @@
         </li>
         <li>
           <a href="#" style="background-image: url(images/articles/divesting_print.jpg);">
-            <header><span>News Title</span>News &amp; Insights</header>
+            <header><span>News Title</span><em>Section Name</em>News &amp; Insights</header>
             <span>
               <p>Media Giants Divest Newspapers, Focus on Broadcast &amp; Digital</p>
             </span>
