--- a/source/stylesheets/partials/_header.scss
+++ b/source/stylesheets/partials/_header.scss
@@ -3,7 +3,7 @@ header.desktop {
   background-color: rgba($white, .9);
   margin-top: 5px;
   display: none;
-  z-index: +1;
+  z-index: +2;
   body.home &,
   body.index & {
     position: absolute;
@@ -86,6 +86,7 @@ header.desktop {
           font-weight: normal;
           max-height: 0;
           overflow: hidden;
+          z-index: 99999;
           @include animate-object;
           li {
             display: inline-block;
@@ -126,7 +127,7 @@ form.search {
       @include flex(0 0 auto);
       width: 30px;
       margin: 0 15px 0 0;
-      height: 100%;
+      height: 63px;
       @include img-content(-20px, -155px);
       padding: 0;
       background-color: transparent;
