finished article style and people style

--- a/source/_news_previews.html.erb
+++ b/source/_news_previews.html.erb
@@ -1,4 +1,4 @@
-<section class="information_boxes news_header">
+<section class="information_boxes news_preview">
   <ul>
     <li>
       <a href="#" style="background-image: url(images/articles/divesting_print.jpg);">
@@ -9,7 +9,7 @@
       </a>
     </li>
     <li>
-      <a href="#" style="background-image: url(images/articles/divesting_print.jpg);">
+      <a href="#" style="background-image: url(images/articles/digital_magazine_ads.jpeg);">
         <header><span>News Title</span><em>Section Name</em>News &amp; Insights</header>
         <span>
           <p>Media Giants Divest Newspapers, Focus on Broadcast &amp; Digital</p>
@@ -17,40 +17,36 @@
       </a>
     </li>
     <li>
-      <ul>
-        <li>
-          <a href="#" style="background-image: url(images/articles/divesting_print.jpg);">
-            <header><span>News Title</span><em>Section Name</em>News &amp; Insights</header>
-            <span>
-              <p>Media Giants Divest Newspapers, Focus on Broadcast &amp; Digital</p>
-            </span>
-          </a>
-        </li>
-        <li>
-          <a href="#" style="background-image: url(images/articles/divesting_print.jpg);">
-            <header><span>News Title</span><em>Section Name</em>News &amp; Insights</header>
-            <span>
-              <p>Media Giants Divest Newspapers, Focus on Broadcast &amp; Digital</p>
-            </span>
-          </a>
-        </li>
-        <li>
-          <a href="#" style="background-image: url(images/articles/divesting_print.jpg);">
-            <header><span>News Title</span><em>Section Name</em>News &amp; Insights</header>
-            <span>
-              <p>Media Giants Divest Newspapers, Focus on Broadcast &amp; Digital</p>
-            </span>
-          </a>
-        </li>
-        <li>
-          <a href="#" style="background-image: url(images/articles/divesting_print.jpg);">
-            <header><span>News Title</span><em>Section Name</em>News &amp; Insights</header>
-            <span>
-              <p>Media Giants Divest Newspapers, Focus on Broadcast &amp; Digital</p>
-            </span>
-          </a>
-        </li>
-      </ul>
+      <a href="#" style="background-image: url(images/articles/cnn-tv-everywhere.jpg);">
+        <header><span>News Title</span><em>Section Name</em>News &amp; Insights</header>
+        <span>
+          <p>Media Giants Divest Newspapers, Focus on Broadcast &amp; Digital</p>
+        </span>
+      </a>
+    </li>
+    <li>
+      <a href="#" style="background-image: url(images/articles/optimization_transparency.jpg);">
+        <header><span>News Title</span><em>Section Name</em>News &amp; Insights</header>
+        <span>
+          <p>Media Giants Divest Newspapers, Focus on Broadcast &amp; Digital</p>
+        </span>
+      </a>
+    </li>
+    <li>
+      <a href="#" style="background-image: url(images/articles/kid_using-iPad_in_car.jpg);">
+        <header><span>News Title</span><em>Section Name</em>News &amp; Insights</header>
+        <span>
+          <p>Media Giants Divest Newspapers, Focus on Broadcast &amp; Digital</p>
+        </span>
+      </a>
+    </li>
+    <li>
+      <a href="#" style="background-image: url(images/articles/World-Cup.jpg);">
+        <header><span>News Title</span><em>Section Name</em>News &amp; Insights</header>
+        <span>
+          <p>Media Giants Divest Newspapers, Focus on Broadcast &amp; Digital</p>
+        </span>
+      </a>
     </li>
   </ul>
 </section>
