--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,7 +2,7 @@
 title: Welcome &#124; Empower MediaMarketing
 ---
 
-<%= partial "news_previews" %>
+<%= partial "news_header" %>
 <%= partial "header" %>
 
 <section class="page-slide slide1" style="background-image: url(images/index/index-3.jpg);">
