--- a/source/our-people.html.erb
+++ b/source/our-people.html.erb
@@ -8,7 +8,7 @@ title: Our People &#124; Empower MediaMarketing
   <ul>
     <li>
       <a href="#" style="background-image: url(images/people/jim-price.jpg);">
-        <header><span>Jim Price</span><em>CEO</em>Leader</header>
+        <header><span>Jim Price</span><em>CEO</em>Leadership</header>
         <span>
           <p><strong>Jim Price</strong> leads The Empower Group, an independent network of companies, and pushes each company to help brands build business by following their individual purpose</p>
         </span>
@@ -16,19 +16,136 @@ title: Our People &#124; Empower MediaMarketing
       </a>
     </li>
     <li>
-      <a href="#" style="background-image: url(images/people/jim-price.jpg);">
-        <header><span>Jim Price</span><em>CEO</em>Leader</header>
+      <a href="#" style="background-image: url(images/people/lynne-veil.jpg);">
+        <header><span>Lynne Veil</span><em>Executive Vice President &amp; COO</em>Leadership</header>
         <span>
-          <p><strong>Jim Price</strong> leads The Empower Group, an independent network of companies, and pushes each company to help brands build business by following their individual purpose</p>
+          <p><strong>Lynne Veil</strong> ensures Empower has a clear vision, strong leadership at all levels of the company as well as a clearly-stated strategic plan and an unwavering commitment to carrying it out.</p>
         </span>
         <div class="overlay"></div>
       </a>
     </li>
     <li>
-      <a href="#" style="background-image: url(images/people/jim-price.jpg);">
-        <header><span>Jim Price</span><em>CEO</em>Leader</header>
+      <a href="#" style="background-image: url(images/people/joseph-lowry.jpg);">
+        <header><span>Joseph Lowry</span><em>CFO</em>Leadership</header>
         <span>
-          <p><strong>Jim Price</strong> leads The Empower Group, an independent network of companies, and pushes each company to help brands build business by following their individual purpose</p>
+          <p><strong>Joseph Lowry</strong> is responsible for the agency’s finance and accounting, management information systems, media finances and compensation as well as employee benefits trends and plans.</p>
+        </span>
+        <div class="overlay"></div>
+      </a>
+    </li>
+    <li>
+      <a href="#" style="background-image: url(images/people/joseph-lowry.jpg);">
+        <header><span>Maria Topken</span><em>Senior Vice President</em>Client Leadership</header>
+        <span>
+          <p><strong>Maria Topken</strong> leads the charge to ensure we find the right audiences for her clients’ messages.</p>
+        </span>
+        <div class="overlay"></div>
+      </a>
+    </li>
+    <li>
+      <a href="#" style="background-image: url(images/people/cathy-shaffner.jpg);">
+        <header><span>Cathy Shaffner</span><em>Senior Vice President</em>Business Development</header>
+        <span>
+          <p><strong>Cathy Shaffner</strong> searches for innovative and forward thinking brands that Empower can connect with consumers.</p>
+        </span>
+        <div class="overlay"></div>
+      </a>
+    </li>
+    <li>
+      <a href="#" style="background-image: url(images/people/julie-pahutski.jpg);">
+        <header><span>Julie Pahutski</span><em>Senior Vice President</em>Decision Sciences</header>
+        <span>
+          <p><strong>Julie Pahutski</strong> is devoted to ensuring that each client gets the most benefit to their business from their media investment.</p>
+        </span>
+        <div class="overlay"></div>
+      </a>
+    </li>
+    <li>
+      <a href="#" style="background-image: url(http://placehold.it/800x300);">
+        <header><span>Michael Welch</span><em>Senior Vice President</em>Client Leadership</header>
+        <span>
+          <p><strong>Michael Welch</strong> shows his clients their media investments are working.</p>
+        </span>
+        <div class="overlay"></div>
+      </a>
+    </li>
+    <li>
+      <a href="#" style="background-image: url(images/people/mitch-dunn.jpg);">
+        <header><span>Mitch Dunn</span><em>Senior Vice President</em>Strategic Planning</header>
+        <span>
+          <p><strong>Mitch Dunn</strong> ensures we make strategic decisions on behalf of our clients.</p>
+        </span>
+        <div class="overlay"></div>
+      </a>
+    </li>
+    <li>
+      <a href="#" style="background-image: url(images/people/denise-halpin.jpg);">
+        <header><span>Denise Halpin</span><em>Senior Vice President</em>Client Leadership</header>
+        <span>
+          <p><strong>Denise Halpin</strong> collaborates with clients and their consumers to uncover insights for winning media plans.</p>
+        </span>
+        <div class="overlay"></div>
+      </a>
+    </li>
+    <li>
+      <a href="#" style="background-image: url(images/people/regina-lithen.jpg);">
+        <header><span>Regina Lithen</span><em>Senior Vice President</em>Client Leadership</header>
+        <span>
+          <p><strong>Regina Lithen</strong> has the curiosity to seek insights that often lead to breakthrough integration, grabbing the customers’ attention.</p>
+        </span>
+        <div class="overlay"></div>
+      </a>
+    </li>
+    <li>
+      <a href="#" style="background-image: url(http://placehold.it/800x300);">
+        <header><span>Michele Toller</span><em>Vice President</em>Media Marketing</header>
+        <span>
+          <p><strong>Michele Toller</strong> has an insatiable appetite for finding new ways to deliver a great product.</p>
+        </span>
+        <div class="overlay"></div>
+      </a>
+    </li>
+    <li>
+      <a href="#" style="background-image: url(images/people/ryan-derrow.jpg);">
+        <header><span>Ryan Derrow</span><em>Vice President</em>Media Marketing</header>
+        <span>
+          <p><strong>Ryan Derrow</strong> has a passion for innovating on the fringes and letting numbers prove what works.</p>
+        </span>
+        <div class="overlay"></div>
+      </a>
+    </li>
+    <li>
+      <a href="#" style="background-image: url(http://placehold.it/800x300);">
+        <header><span>David Germano</span><em>Vice President</em>Content Marketing</header>
+        <span>
+          <p><strong>David Germano</strong> helps brands better leverage innovative interactive technologies to achieve their strategic marketing objectives.</p>
+        </span>
+        <div class="overlay"></div>
+      </a>
+    </li>
+    <li>
+      <a href="#" style="background-image: url(images/people/brice-lucas.jpg);">
+        <header><span>Brice Lucas</span><em>Vice President</em>Technology</header>
+        <span>
+          <p><strong>Brice Lucas</strong> oversees that Empower is best-in-class across our infrastructure, client services and technology innovation initiatives.</p>
+        </span>
+        <div class="overlay"></div>
+      </a>
+    </li>
+    <li>
+      <a href="#" style="background-image: url(images/people/tim-glover.jpg);">
+        <header><span>Tim Glover</span><em>Vice President</em>Client Leadership</header>
+        <span>
+          <p><strong>Tim Glover</strong> mantra is, “if you don’t ride the wave of change, you’ll find yourself beneath it.”</p>
+        </span>
+        <div class="overlay"></div>
+      </a>
+    </li>
+    <li>
+      <a href="#" style="background-image: url(http://placehold.it/800x300);">
+        <header><span>Alison Lang</span><em>Vice President</em>Client Leadership</header>
+        <span>
+          <p><strong>Alison Lang</strong> brings innovation to the table, with the execution chops to pull off incredible campaigns.</p>
         </span>
         <div class="overlay"></div>
       </a>
