--- a/source/stylesheets/partials/_wireframe.scss
+++ b/source/stylesheets/partials/_wireframe.scss
@@ -18,7 +18,7 @@
 html,
 body {
   height: 100%;
-  background-color: $grey;
+  background-color: $white;
 }
 
 body {
@@ -37,11 +37,12 @@ img {
   width: 100%;
   position: relative;
   @include animate-object;
+  background-color: $white;
+  @include clear-float;
   &.mobile_active {
     margin-left: 300px;
   }
-}
-
-header {
-  @include site-width;
+  > header {
+    @include site-width;
+  }
 }
