--- a/source/stylesheets/partials/_header.scss
+++ b/source/stylesheets/partials/_header.scss
@@ -1,5 +1,6 @@
 header.desktop {
   position: relative;
+  @include site-width;
   background-color: rgba($white, .9);
   margin-top: 5px;
   display: none;
@@ -145,11 +146,13 @@ form.search {
 
 header.mobile {
   display: block;
+  @include site-width;
   background-color: $white;
   padding-top: 5px;
   padding-bottom: 5px;
   z-index: +1;
   position: fixed;
+  @include animate-object;
   // body.home &,
   // body.index & {
   //   position: absolute;
@@ -159,6 +162,9 @@ header.mobile {
   //     top: 250px;
   //   }
   // }
+  &.mobile_active {
+    margin-left: 300px;
+  }
   @include respond-to(large) {
     display: none;
   }
