--- a/source/stylesheets/partials/_information_boxes.scss
+++ b/source/stylesheets/partials/_information_boxes.scss
@@ -125,6 +125,9 @@
 
 .news_header {
   display: none;
+  &.mobile_active {
+      margin-left: 300px;
+    } 
   body.home &,
   body.index & {
     display: block;
@@ -132,7 +135,8 @@
     top: 0;
     left: auto !important;
     width: 100%;
-    z-index: +1;  
+    z-index: +1; 
+    @include animate-object;
   }
   > ul {
     margin-top: 0;
