styles for page marker in nav

--- a/source/_header.html.erb
+++ b/source/_header.html.erb
@@ -12,7 +12,7 @@
         </ul>
       </li>
       <li><a href="#">Work</a></li>
-      <li><a href="#">News &amp; Insights</a></li>
+      <li class="onpage"><a href="#">News &amp; Insights</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
   </nav>
