styled article-2 page

--- a/source/article-1.html.erb
+++ b/source/article-1.html.erb
@@ -1,5 +1,5 @@
 ---
-title: Article &#124; Empower MediaMarketing
+title: Main Article Template &#124; Empower MediaMarketing
 ---
 
 <div class="news_image" style="background-image: url(images/articles/hero/hero-article-brandery.jpg);"></div>
