--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -22,11 +22,13 @@
     <%= partial "news_header" %> <!-- HOMEPAGE ONLY -->
     <%= partial "header" %>
     <%= partial "mobile_nav" %>
+
     <div id="container">
       <div class="sticky_spacer"></div>
-      <%= yield %>
+      <%= yield %> <!-- PAGE CONTENT -->
       <%= partial "footer" %>
     </div>
-    <%= javascript_include_tag  "all" %>
+
+    <%= javascript_include_tag  "jquery", "all" %>
   </body>
 </html>
