--- a/source/article-1.html.erb
+++ b/source/article-1.html.erb
@@ -33,7 +33,31 @@ title: Main Article Template &#124; Empower MediaMarketing
   <p>Jim Price, president of Empower MediaMarketing, said,</p>
   <blockquote>... By augmenting the support The Brandery provides startups, our hope is to increase one startup’s chances of success. The fellowship recognizes the opportunity in the changing media landscape and is designed to help a startup harness this opportunity in a way that can change how the industry uses media.</blockquote>
   <p>Empower has been supporting The Brandery since it opened in 2010, providing mentors and media planning resources to the entrepreneurs.</p>
+  <ul>
+    <li>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam nesciunt at quidem iste cumque ut fugiat, eaque quis dolorem, delectus nam autem tempora rerum, maxime! Libero doloremque repellendus nemo tenetur.
+      <ul>
+        <li>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam nesciunt at quidem iste cumque ut fugiat, eaque quis dolorem, delectus nam autem tempora rerum, maxime! Libero doloremque repellendus nemo tenetur.
+        </li>
+        <li>Nisi in, et, itaque eius unde nobis voluptatibus id enim soluta illum dicta nihil rem adipisci velit quibusdam, ducimus laboriosam, nulla odit commodi inventore necessitatibus veniam. Earum voluptates, assumenda molestias!</li>
+      </ul>
+    </li>
+    <li>Nisi in, et, itaque eius unde nobis voluptatibus id enim soluta illum dicta nihil rem adipisci velit quibusdam, ducimus laboriosam, nulla odit commodi inventore necessitatibus veniam. Earum voluptates, assumenda molestias!</li>
+    <li>Quod ipsa optio officia, repellat perferendis, consequuntur ut odio ratione, architecto vero pariatur sint consectetur alias expedita doloremque in obcaecati. Rem assumenda voluptates neque in, ipsam inventore maxime officiis voluptatem!</li>
+  </ul>
   <p>Empower’s Disruptive Media Fellowship builds on the mentoring services Empower will provide as part of the Brandery’s annual program. The agency will also assess opportunities for its clients and partners to work with the startup that will benefit all involved.</p>
+  <ol>
+    <li>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam nesciunt at quidem iste cumque ut fugiat, eaque quis dolorem, delectus nam autem tempora rerum, maxime! Libero doloremque repellendus nemo tenetur.
+      <ol>
+        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, fuga vel nulla pariatur vero non sit, enim aut accusantium ipsam eos iusto hic perspiciatis reprehenderit voluptates esse voluptas dolor culpa.</li>
+        <li>Et odio molestiae praesentium esse laudantium amet, voluptates, excepturi, eligendi placeat aliquam officiis, eveniet optio beatae ipsum! Assumenda, eum similique laborum aut quaerat id maiores, mollitia illo reiciendis fuga dolorum?</li>
+      </ol>
+    </li>
+    <li>Nisi in, et, itaque eius unde nobis voluptatibus id enim soluta illum dicta nihil rem adipisci velit quibusdam, ducimus laboriosam, nulla odit commodi inventore necessitatibus veniam. Earum voluptates, assumenda molestias!</li>
+    <li>Quod ipsa optio officia, repellat perferendis, consequuntur ut odio ratione, architecto vero pariatur sint consectetur alias expedita doloremque in obcaecati. Rem assumenda voluptates neque in, ipsam inventore maxime officiis voluptatem!</li>
+  </ol>
   <h3>About The Brandery</h3>
   <p>The Brandery is a Cincinnati-based non-profit startup accelerator with the goal of supporting startups in technology-based consumer experiences. The Brandery is annually recognized as one of the elite startup accelerators in the country. More than 60 mentors work with the companies, which each receive $20,000 in seed money. Leading Cincinnati-based agencies offer free marketing and media guidance to each of the startups.</p>
   <h3>About Empower MediaMarketing</h3>
