footer to top link and close button for mobile nav

--- a/source/_footer.html.erb
+++ b/source/_footer.html.erb
@@ -27,7 +27,7 @@
   </div>
   <div class="bottom_footer">
     <p>© 201X–201X Empower MediaMarketing. All rights reserved. <a href="#">Privacy Policy</a></p>
-    <a href="#" class="to_top">To The Top</a>
+    <a href="#top_page" class="to_top">To The Top</a>
     <ul class="social_footer">
       <li><a href="#" class="twitter">Twitter</a></li>
       <li><a href="#" class="youtube">YouTube</a></li>
