--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -18,7 +18,7 @@
     <%= javascript_include_tag  "modernizr" %>
   </head>
 
-  <body class="<%= page_classes %>">
+  <body class="<%= page_classes %>" id="top_page">
     <%= partial "news_header" %> <!-- HOMEPAGE ONLY -->
     <%= partial "header" %>
     <%= partial "mobile_nav" %>
