--- a/source/stylesheets/partials/_page-article.scss
+++ b/source/stylesheets/partials/_page-article.scss
@@ -1,14 +1,17 @@
 #container > .news_image {
   width: 100%;
-  height: 750px;
+  height: 300px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
+  @include respond-to(small) {
+    height: 750px;
+  }
 }
 
 article.main_news {
   width: 100%;
-  margin: -450px auto 0;
+  margin: 0 auto;
   padding: 70px 5%;
   background: $white;
   position: relative;
@@ -16,6 +19,7 @@ article.main_news {
   @include respond-to(small) {
     width: 70%;
     padding: 40px;
+    margin: -450px auto 0;
   }
   .tag_share {
     margin: 30px 0;
