clients page template

--- a/source/news.html.erb
+++ b/source/news.html.erb
@@ -1,5 +1,57 @@
+---
+title: News/Blog Template &#124; Empower MediaMarketing
+---
+
 <section class="information_boxes news_preview">
   <ul>
+    <li>
+      <a href="#" style="background-image: url(images/articles/divesting_print.jpg);">
+        <header><span>Short Title</span><em>Category</em>News &amp; Insights</header>
+        <span>
+          <p>Long Title</p>
+        </span>
+      </a>
+    </li>
+    <li>
+      <a href="#" style="background-image: url(images/articles/digital_magazine_ads.jpeg);">
+       <header><span>Short Title</span><em>Category</em>News &amp; Insights</header>
+        <span>
+          <p>Long Title</p>
+        </span>
+      </a>
+    </li>
+    <li>
+      <a href="#" style="background-image: url(images/articles/cnn-tv-everywhere.jpg);">
+        <header><span>Short Title</span><em>Category</em>News &amp; Insights</header>
+        <span>
+          <p>Long Title</p>
+        </span>
+      </a>
+    </li>
+    <li>
+      <a href="#" style="background-image: url(images/articles/optimization_transparency.jpg);">
+        <header><span>Short Title</span><em>Category</em>News &amp; Insights</header>
+        <span>
+          <p>Long Title</p>
+        </span>
+      </a>
+    </li>
+    <li>
+      <a href="#" style="background-image: url(images/articles/kid_using-iPad_in_car.jpg);">
+        <header><span>Short Title</span><em>Category</em>News &amp; Insights</header>
+        <span>
+          <p>Long Title</p>
+        </span>
+      </a>
+    </li>
+    <li>
+      <a href="#" style="background-image: url(images/articles/World-Cup.jpg);">
+        <header><span>Short Title</span><em>Category</em>News &amp; Insights</header>
+        <span>
+          <p>Long Title</p>
+        </span>
+      </a>
+    </li>
     <li>
       <a href="#" style="background-image: url(images/articles/divesting_print.jpg);">
         <header><span>Short Title</span><em>Category</em>News &amp; Insights</header>
