--- a/source/stylesheets/styles.scss
+++ b/source/stylesheets/styles.scss
@@ -16,3 +16,4 @@
 @import 'partials/page-home';
 @import 'partials/page-article';
 @import 'partials/page-interior';
+@import 'partials/page-clients';
