--- a/source/_news_header.html.erb
+++ b/source/_news_header.html.erb
@@ -2,17 +2,17 @@
   <ul>
     <li>
       <a href="#" style="background-image: url(images/articles/divesting_print.jpg);">
-        <header><span>News Title</span><em>Section Name</em>News &amp; Insights</header>
+        <header><span>Short Title</span><em>Category</em>News &amp; Insights</header>
         <span>
-          <p>Media Giants Divest Newspapers, Focus on Broadcast &amp; Digital</p>
+          <p>Long Title</p>
         </span>
       </a>
     </li>
     <li>
       <a href="#" style="background-image: url(images/articles/digital_magazine_ads.jpeg);">
-        <header><span>News Title</span><em>Section Name</em>News &amp; Insights</header>
+        <header><span>Short Title</span><em>Category</em>News &amp; Insights</header>
         <span>
-          <p>Media Giants Divest Newspapers, Focus on Broadcast &amp; Digital</p>
+          <p>Long Title</p>
         </span>
       </a>
     </li>
@@ -20,33 +20,33 @@
       <ul>
         <li>
           <a href="#" style="background-image: url(images/articles/cnn-tv-everywhere.jpg);">
-            <header><span>News Title</span><em>Section Name</em>News &amp; Insights</header>
+            <header><span>Short Title</span><em>Category</em>News &amp; Insights</header>
             <span>
-              <p>Media Giants Divest Newspapers, Focus on Broadcast &amp; Digital</p>
+              <p>Long Title</p>
             </span>
           </a>
         </li>
         <li>
           <a href="#" style="background-image: url(images/articles/optimization_transparency.jpg);">
-            <header><span>News Title</span><em>Section Name</em>News &amp; Insights</header>
+            <header><span>Short Title</span><em>Category</em>News &amp; Insights</header>
             <span>
-              <p>Media Giants Divest Newspapers, Focus on Broadcast &amp; Digital</p>
+              <p>Long Title</p>
             </span>
           </a>
         </li>
         <li>
           <a href="#" style="background-image: url(images/articles/kid_using-iPad_in_car.jpg);">
-            <header><span>News Title</span><em>Section Name</em>News &amp; Insights</header>
+            <header><span>Short Title</span><em>Category</em>News &amp; Insights</header>
             <span>
-              <p>Media Giants Divest Newspapers, Focus on Broadcast &amp; Digital</p>
+              <p>Long Title</p>
             </span>
           </a>
         </li>
         <li>
           <a href="#" style="background-image: url(images/articles/World-Cup.jpg);">
-            <header><span>News Title</span><em>Section Name</em>News &amp; Insights</header>
+            <header><span>Short Title</span><em>Category</em>News &amp; Insights</header>
             <span>
-              <p>Media Giants Divest Newspapers, Focus on Broadcast &amp; Digital</p>
+              <p>Long Title</p>
             </span>
           </a>
         </li>
