--- a/source/clients.html.erb
+++ b/source/clients.html.erb
@@ -1,5 +1,5 @@
 ---
-title: News/Blog Template &#124; Empower MediaMarketing
+title: Clients Template &#124; Empower MediaMarketing
 ---
 
 <section class="clients">
