--- a/source/our-work.html.erb
+++ b/source/our-work.html.erb
@@ -1,17 +1,7 @@
 ---
-title: News/Blog Template &#124; Empower MediaMarketing
+title: Our Work Template &#124; Empower MediaMarketing
 ---
 
-<section class="news_tags">
-  Tags:
-  <ul>
-    <li><a href="#">Tag</a></li>
-    <li><a href="#">Tag</a></li>
-    <li><a href="#">Tag</a></li>
-    <li><a href="#">Tag</a></li>
-    <li><a href="#">Tag</a></li>
-  </ul>
-</section>
 <section class="information_boxes news_preview">
   <ul>
     <li>
