--- a/source/stylesheets/partials/_page-article.scss
+++ b/source/stylesheets/partials/_page-article.scss
@@ -1,3 +1,32 @@
+section.news_tags {
+  @include site-width;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  ul {
+    margin: 0 !important;
+    list-style-type: none !important;
+    display: inline-block;
+    li {
+      margin: 0 !important;
+      display: inline-block;
+      &::after {
+        content: ", "
+      }
+      &:last-child {
+        &::after {
+          content: ""
+        }
+      }
+      a {
+        opacity: 1;
+        &:hover {
+          opacity: .4;
+        }
+      }
+    }
+  }
+}
+
 #container > .news_image {
   width: 100%;
   height: 300px;
