--- a/source/stylesheets/partials/_forms.scss
+++ b/source/stylesheets/partials/_forms.scss
@@ -80,6 +80,49 @@ form {
   }
 }
 
+form.search {
+  @include flex(1 1 auto);
+  position: relative;
+  input {
+    display: inline-block;
+    vertical-align: middle;
+    &[type=text] {
+      @include flex(1 1 auto);
+      max-width: 0;
+      opacity: 0;
+      position: absolute;
+      right: 0;
+      padding: 21px 15px 22px;
+      @include animate-object;
+    }
+    &[type=submit] {
+      @include flex(0 0 auto);
+      width: 30px;
+      margin: 0 15px 0 0;
+      height: 63px;
+      @include img-content(-20px, -155px);
+      padding: 0;
+      background-color: transparent;
+      position: absolute;
+      right: 0;
+    }
+  }
+  &:hover {
+    input[type=text] {
+      max-width: 600px;
+      opacity: 1;
+    }
+  }
+  input:valid:not([type=submit]) {
+    border-color: none;
+    background: $white;
+  }
+  input:focus:invalid:not([type=submit]) {
+    border-color: none;
+    background: $white;
+  }
+}
+
 footer {
   form {
     input[type=text],
