--- a/source/stylesheets/partials/_page-interior.scss
+++ b/source/stylesheets/partials/_page-interior.scss
@@ -5,6 +5,17 @@ article.interior_page {
   background: $white;
   position: relative;
   @include box-sizing(border-box);
+  .fourohfoursearch {
+    width: 100%;
+    height: 75px;
+    form.search {
+      input[type=text] {
+        max-width: 100%;
+        opacity: 1;
+        border: $grey 1px solid;
+      }
+    }
+  }
   @include respond-to(small) {
     width: 70%;
     padding: 40px;
