sticky slider nav styles and jq

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,6 +2,17 @@
 title: Welcome &#124; Empower MediaMarketing
 ---
 
+<ul class="slider_nav">
+  <li class="active"><a href="#">Media is Power</a></li>
+  <li><a href="#">Our Culture</a></li>
+  <li><a href="#">Our People</a></li>
+  <li><a href="#">Our Work</a></li>
+  <li><a href="#">Our Capabilities</a></li>
+  <li><a href="#">Creativity &amp; Innovation</a></li>
+  <li><a href="#">Join Us</a></li>
+  <li><a href="#">Contact Us</a></li>
+</ul>
+
 <section class="page-slide slide1" style="background-image: url(images/index/index-3.jpg);">
   <a href="#" class="slide_content">
     <h2>Media is Power</h2>
