--- a/source/stylesheets/partials/_page-home.scss
+++ b/source/stylesheets/partials/_page-home.scss
@@ -1,3 +1,59 @@
+ul.slider_nav {
+  position: absolute;
+  top: auto;
+  bottom: 30px;
+  right: 30px;
+  z-index: +1;
+  margin: 0 !important;
+  list-style-type: none !important;
+  &.sticky {
+    top: 50%;
+    bottom: auto;
+    transform: translateY(-50%);
+    position: fixed;
+  }
+  li {
+    margin: 0 !important;
+    text-align: right;
+    border-right: 1px solid $white;
+    &:hover {
+      border-right: 1px solid transparent;
+    }
+    a {
+      color: $white;
+      padding: 5px 15px 5px 0;
+      display: block;
+      position: relative;
+      opacity: .7;
+      font-weight: bold;
+      @include text-shadow(rgba($black, .2) 1px 1px 0px);
+      &::after {
+        font-family: 'emm-icons';
+        @include font-size(28);
+        content: "";
+        position: absolute;
+        right: -14px;
+        bottom: 0;
+      }
+      &:hover {
+        opacity: 1;
+        &::after {
+          content: "";
+        }
+      }
+    }
+    &.active {
+      border-right: 1px solid transparent;
+      a {
+        opacity: 1;
+        &::after {
+          content: "";
+        }
+      }
+    }
+  }
+}
+
 .page-slide {
   height: 100%;
   background-size: cover;
