--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,14 +3,14 @@ title: Welcome &#124; Empower MediaMarketing
 ---
 
 <ul class="slider_nav">
-  <li class="active"><a href="#">Media is Power</a></li>
-  <li><a href="#">Our Culture</a></li>
-  <li><a href="#">Our People</a></li>
-  <li><a href="#">Our Work</a></li>
-  <li><a href="#">Our Capabilities</a></li>
-  <li><a href="#">Creativity &amp; Innovation</a></li>
-  <li><a href="#">Join Us</a></li>
-  <li><a href="#">Contact Us</a></li>
+  <li class="nav1 active"><a href="#">Media is Power</a></li>
+  <li class="nav2"><a href="#">Our Culture</a></li>
+  <li class="nav3"><a href="#">Our People</a></li>
+  <li class="nav4"><a href="#">Our Work</a></li>
+  <li class="nav5"><a href="#">Our Capabilities</a></li>
+  <li class="nav6"><a href="#">Creativity &amp; Innovation</a></li>
+  <li class="nav7"><a href="#">Join Us</a></li>
+  <li class="nav8"><a href="#">Contact Us</a></li>
 </ul>
 
 <section class="page-slide slide1" style="background-image: url(images/index/index-3.jpg);">
