--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -24,7 +24,7 @@
     <%= partial "mobile_nav" %>
 
     <div id="container">
-      <div class="sticky_spacer"></div>
+      <div class="sticky_spacer active"></div>
       <%= yield %> <!-- PAGE CONTENT -->
       <%= partial "footer" %>
     </div>
