--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -18,7 +18,12 @@
     <%= javascript_include_tag  "modernizr" %>
   </head>
 
-  <body class="<%= page_classes %>" id="top_page">
+  <!--[if IE ]>
+     <body class="<%= page_classes %>" id="top_page" class="ie">
+  <![endif]-->
+  <!--[if !IE]>-->
+     <body class="<%= page_classes %>" id="top_page">
+  <!--<![endif]-->
     <%= partial "news_header" %> <!-- HOMEPAGE ONLY -->
     <%= partial "header" %>
     <%= partial "mobile_nav" %>
