Add some Wordpress-specific styles.
Tweak nav javascript to allow access to child page links.

--- a/source/stylesheets/partials/_header.scss
+++ b/source/stylesheets/partials/_header.scss
@@ -119,7 +119,7 @@ header.desktop {
             max-height: 70px;
           }
         }
-        &.onpage {
+        &.onpage,&.current-menu-item, {
           background-color: $green;
           > a {
             color: $white;
